--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -149,7 +149,7 @@ services {
 
   oap-prometheus-metrics {
     profiles = prometheus
-    implementation = oap.prometheus.PrometheusExporter
+    implementation = oap.http.prometheus.PrometheusExporter
     parameters {
       port = httpprivate
       server = <modules.this.oap-http-server>
@@ -159,7 +159,7 @@ services {
 
   prometheus-jvm-exporter {
     profiles = prometheus
-    implementation = oap.prometheus.PrometheusJvmExporter
+    implementation = oap.http.prometheus.PrometheusJvmExporter
     parameters {
       enableClassLoaderMetrics = true
       enableJvmMemoryMetrics = true
@@ -172,7 +172,7 @@ services {
 
   prometheus-application-info-exporter {
     profiles = prometheus
-    implementation = oap.prometheus.PrometheusApplicationInfoExporter
+    implementation = oap.http.prometheus.PrometheusApplicationInfoExporter
     supervision.supervise = true
   }
 }
