--- a/oap-formats/oap-json/pom.xml
+++ b/oap-formats/oap-json/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>oap</groupId>
-        <artifactId>oap</artifactId>
+        <artifactId>oap-formats-parent</artifactId>
         <version>${oap.project.version}</version>
     </parent>
 
