--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <modules>
         <module>oap-stdlib</module>
         <module>oap-stdlib-test</module>
-        <module>oap-json</module>
+        <module>oap-http</module>
         <module>oap-template</module>
         <module>oap-alert-slack</module>
         <module>oap-jpath</module>
@@ -55,7 +55,7 @@
     </repositories>
 
     <properties>
-        <oap.project.version>21.14.0</oap.project.version>
+        <oap.project.version>21.15.0</oap.project.version>
 
         <oap.deps.config.version>21.0.0</oap.deps.config.version>
         <oap.deps.oap-teamcity.version>21.0.1</oap.deps.oap-teamcity.version>
