OAP-218 move oap-http to a separate module

--- a/oap-application/oap-application-test/pom.xml
+++ b/oap-application/oap-application-test/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>oap-stdlib-test</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>oap</groupId>
+            <artifactId>oap-http-test</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
