--- a/oap-http/pom.xml
+++ b/oap-http/pom.xml
@@ -12,6 +12,9 @@
     <artifactId>oap-http-parent</artifactId>
 
     <modules>
+        <module>oap-http</module>
         <module>oap-http-prometheus</module>
+        <module>oap-pnio</module>
+        <module>oap-http-test</module>
     </modules>
 </project>
