OAP-218 move oap-http to a separate module

--- a/oap-http/oap-http-prometheus/src/main/resources/META-INF/oap-module.conf
+++ b/oap-http/oap-http-prometheus/src/main/resources/META-INF/oap-module.conf
@@ -1,6 +1,7 @@
 name = oap-http-prometheus
 dependsOn = [
   oap
+  oap-http
 ]
 
 services {
@@ -9,7 +10,7 @@ services {
     implementation = oap.http.prometheus.PrometheusExporter
     parameters {
       port = httpprivate
-      server = <modules.oap.oap-http-server>
+      server = <modules.oap-http.oap-http-server>
     }
   }
 
