OAP-218 move oap-http to a separate module

--- a/oap-application/oap-application-test/src/test/resources/oap/application/remote/RemoteTest/application.conf
+++ b/oap-application/oap-application-test/src/test/resources/oap/application/remote/RemoteTest/application.conf
@@ -6,11 +6,13 @@ profiles = [
 ]
 
 services {
-  oap {
+  oap-http {
     oap-http-server.parameters {
       defaultPort.httpPort = ${HTTP_PORT}
       additionalHttpPorts.httpprivate = ${HTTP_PORT}
     }
+  }
+  oap-application {
     remoting.parameters.serialization = JSON
     remoting.parameters.private_network = true
   }
