--- a/oap-ws/oap-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/oap-ws/src/main/resources/META-INF/oap-module.conf
@@ -1,5 +1,5 @@
 name = oap-ws
-dependsOn = oap
+dependsOn = oap-http
 services {
   session-manager {
     implementation = oap.ws.SessionManager
@@ -14,7 +14,7 @@ services {
     implementation = oap.ws.WebServices
     parameters {
       kernel: <kernel.self>
-      server: <modules.oap.oap-http-server>
+      server: <modules.oap-http.oap-http-server>
       sessionManager: <modules.this.session-manager>
     }
     supervision.supervise: true
