--- a/oap-message/src/test/resources/oap/message/MessageServerTest/application.test.conf
+++ b/oap-message/src/test/resources/oap/message/MessageServerTest/application.test.conf
@@ -7,11 +7,13 @@ profiles = [
 ]
 
 services {
-  oap {
+  oap-http {
     oap-http-server.parameters {
       defaultPort.httpPort = ${TEST_HTTP_PORT}
       additionalHttpPorts.httpprivate = ${TEST_HTTP_PORT}
     }
+  }
+  oap-message {
     oap-http-message-sender.parameters {
       host = localhost
       port = ${TEST_HTTP_PORT}
@@ -21,6 +23,5 @@ services {
       controlStatePath = ${TEST_DIRECTORY}/opt/oap/messages/server
       clientHashCacheSize = 2048
     }
-
   }
 }
