--- a/oap-ws/oap-ws-api-ws/src/test/resources/application.test.conf
+++ b/oap-ws/oap-ws-api-ws/src/test/resources/application.test.conf
@@ -3,7 +3,7 @@ boot.main = oap-ws-api-ws-test
 profile = http
 
 services {
-  oap {
+  oap-http {
     oap-http-server.parameters {
       defaultPort.httpPort = ${TEST_HTTP_PORT}
       additionalHttpPorts.httpprivate = ${TEST_HTTP_PORT}
