--- a/oap-ws/oap-ws-test/src/test/resources/application-ws.test.conf
+++ b/oap-ws/oap-ws-test/src/test/resources/application-ws.test.conf
@@ -6,7 +6,7 @@ profiles = [
 boot.main = oap-ws-validate-test
 
 services {
-  oap {
+  oap-http {
     oap-http-server.parameters {
       defaultPort.httpPort = ${TEST_HTTP_PORT}
       additionalHttpPorts.httpprivate = ${TEST_HTTP_PORT}
