OAP-218 move oap-http to a separate module

--- a/oap-message/src/test/resources/oap/message/MessageServerTest/oap-module.conf
+++ b/oap-message/src/test/resources/oap/message/MessageServerTest/oap-module.conf
@@ -1,6 +1,9 @@
 name = oap-message-test
 
-dependsOn = oap
+dependsOn = [
+  oap
+  oap-http
+]
 
 services {
   message-listener-mock {
@@ -12,6 +15,6 @@ services {
     parameters {
       messageType = 12
     }
-    link.listeners = <modules.oap.oap-http-message-handler>
+    link.listeners = <modules.oap-http.oap-http-message-handler>
   }
 }
