OAP-218 move oap-http to a separate module

--- a/oap-message/src/test/resources/oap/message/MessageServerTest/oap-module.conf
+++ b/oap-message/src/test/resources/oap/message/MessageServerTest/oap-module.conf
@@ -2,7 +2,7 @@ name = oap-message-test
 
 dependsOn = [
   oap
-  oap-http
+  oap-message
 ]
 
 services {
@@ -15,6 +15,6 @@ services {
     parameters {
       messageType = 12
     }
-    link.listeners = <modules.oap-http.oap-http-message-handler>
+    link.listeners = <modules.oap-message.oap-http-message-handler>
   }
 }
