OAP-246 fix: java.nio.file.FileSystemNotFoundException

--- a/oap-stdlib-test/pom.xml
+++ b/oap-stdlib-test/pom.xml
@@ -57,7 +57,7 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.25.3</version>
+            <version>${oap.deps.assertj.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>net.bytebuddy</groupId>
