--- a/pom.xml
+++ b/pom.xml
@@ -54,12 +54,13 @@
     </repositories>
 
     <properties>
-        <oap.project.version>21.15.3</oap.project.version>
+        <oap.project.version>21.15.4</oap.project.version>
 
         <oap.deps.config.version>21.0.0</oap.deps.config.version>
         <oap.deps.oap-teamcity.version>21.0.1</oap.deps.oap-teamcity.version>
 
         <oap.deps.testng.version>7.9.0</oap.deps.testng.version>
+        <oap.deps.assertj.version>3.25.3</oap.deps.assertj.version>
 
         <oap.deps.guava.version>33.0.0-jre</oap.deps.guava.version>
 
