--- a/oap-ws/oap-ws-sso-api-default/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/oap-ws-sso-api-default/src/main/resources/META-INF/oap-module.conf
@@ -1,4 +1,4 @@
-name: oap-ws-sso-api-roles
+name = oap-ws-sso-api-roles
 services {
   oap-ws-sso-roles-provider.implementation = oap.ws.sso.ConfigSecurityRolesProvider
 }
