--- a/oap-ws/oap-ws-sso-api/pom.xml
+++ b/oap-ws/oap-ws-sso-api/pom.xml
@@ -25,6 +25,11 @@
         </dependency>
         <dependency>
             <groupId>oap</groupId>
+            <artifactId>oap-ws-sso-api-default</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>oap</groupId>
             <artifactId>oap-ws-test</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
