OAP-247 RemoteStorage#findAndModify

--- a/oap-ws/oap-ws-sso-api/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/oap-ws-sso-api/src/main/resources/META-INF/oap-module.conf
@@ -1,11 +1,11 @@
-name: oap-ws-sso-api
-dependsOn = [
-  oap-ws-sso-api-roles
-]
+name = oap-ws-sso-api
+
 services {
+  oap-ws-sso-roles-provider.implementation = oap.ws.sso.ConfigSecurityRolesProvider
+
   oap-ws-sso-roles {
     implementation = oap.ws.sso.SecurityRoles
-    parameters.provider = <modules.oap-ws-sso-api-roles.oap-ws-sso-roles-provider>
+    parameters.provider = <modules.this.oap-ws-sso-roles-provider>
   }
 
   jwt-token-generator {
