OAP-250 Clean-up redundant jars

--- a/oap-hadoop/oap-hadoop/pom.xml
+++ b/oap-hadoop/oap-hadoop/pom.xml
@@ -14,8 +14,8 @@
     <dependencies>
         <dependency>
             <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk-bundle</artifactId>
-            <version>${oap.deps.aws-java-sdk-bundle.version}</version>
+            <artifactId>aws-java-sdk-s3</artifactId>
+            <version>${oap.deps.aws-java-sdk-s3.version}</version>
         </dependency>
         <dependency>
             <groupId>oap</groupId>
