--- a/oap-stdlib/pom.xml
+++ b/oap-stdlib/pom.xml
@@ -46,27 +46,27 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-text</artifactId>
-            <version>${oap.deps.apache.commons.text.version}</version>
+            <version>${oap.deps.apache.commons-text.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-compress</artifactId>
-            <version>${oap.deps.apache.commons.compress.version}</version>
+            <version>${oap.deps.apache.commons-compress.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>${oap.deps.apache.lang.version}</version>
+            <version>${oap.deps.apache.commons-lang3.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>${oap.deps.apache.io.version}</version>
+            <version>${oap.deps.apache.commons-io.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
-            <version>${oap.deps.apache.commons.codec.version}</version>
+            <version>${oap.deps.apache.commons-codec.version}</version>
         </dependency>
         <dependency>
             <groupId>joda-time</groupId>
@@ -147,7 +147,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-configuration2</artifactId>
-            <version>${oap.deps.apache.configuration.version}</version>
+            <version>${oap.deps.apache.commons-configuration2.version}</version>
         </dependency>
         <dependency>
             <groupId>cn.danielw</groupId>
@@ -211,7 +211,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
-            <version>${oap.deps.apache.collections.version}</version>
+            <version>${oap.deps.apache.commons-collections4.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
