--- a/oap-hadoop/oap-hadoop/pom.xml
+++ b/oap-hadoop/oap-hadoop/pom.xml
@@ -14,8 +14,8 @@
     <dependencies>
         <dependency>
             <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk-bundle</artifactId>
-            <version>${oap.deps.aws-java-sdk-bundle.version}</version>
+            <artifactId>aws-java-sdk-s3</artifactId>
+            <version>${oap.deps.aws-java-sdk-s3.version}</version>
         </dependency>
         <dependency>
             <groupId>oap</groupId>
@@ -27,6 +27,12 @@
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-aws</artifactId>
             <version>${oap.deps.hadoop.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.amazonaws</groupId>
+                    <artifactId>aws-java-sdk-bundle</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
