OAP-255 Fixtures/Fixture refactoring (improved support for ENV variables)

--- a/oap-ws/oap-ws-admin-ws/src/test/resources/application.test.conf
+++ b/oap-ws/oap-ws-admin-ws/src/test/resources/application.test.conf
@@ -3,7 +3,7 @@ boot.main = oap-ws-admin-ws-test
 profile = http
 
 services {
-  oap.oap-http-server.parameters.port = ${TEST_HTTP_PORT}
+  oap.oap-http-server.parameters.port = ${ADMINWS_FIXTURE_TEST_HTTP_PORT}
   
   oap-ws.session-manager.parameters.cookieDomain: ""
 }
