--- a/oap-ws/oap-ws-api-ws/src/test/resources/application.test.conf
+++ b/oap-ws/oap-ws-api-ws/src/test/resources/application.test.conf
@@ -5,8 +5,8 @@ profile = http
 services {
   oap-http {
     oap-http-server.parameters {
-      defaultPort.httpPort = ${TEST_HTTP_PORT}
-      additionalHttpPorts.httpprivate = ${TEST_HTTP_PORT}
+      defaultPort.httpPort = ${APIWS_FIXTURE_TEST_HTTP_PORT}
+      additionalHttpPorts.httpprivate = ${APIWS_FIXTURE_TEST_HTTP_PORT}
     }
   }
 
