--- a/oap-ws/oap-ws-test/src/test/resources/application-ws.test.conf
+++ b/oap-ws/oap-ws-test/src/test/resources/application-ws.test.conf
@@ -8,8 +8,8 @@ boot.main = oap-ws-validate-test
 services {
   oap-http {
     oap-http-server.parameters {
-      defaultPort.httpPort = ${TEST_HTTP_PORT}
-      additionalHttpPorts.httpprivate = ${TEST_HTTP_PORT}
+      defaultPort.httpPort = ${VALIDATION_FIXTURE_TEST_HTTP_PORT}
+      additionalHttpPorts.httpprivate = ${VALIDATION_FIXTURE_TEST_HTTP_PORT}
     }
   }
   oap-ws {
