OAP-255 Fixtures/Fixture refactoring (improved support for ENV variables)

--- a/oap-application/oap-application-test/src/test/resources/oap/application/remote/RemoteTest/module.conf
+++ b/oap-application/oap-application-test/src/test/resources/oap/application/remote/RemoteTest/module.conf
@@ -13,7 +13,7 @@ remote-service {
 remote-client {
   implementation = oap.application.remote.RemoteClient
   remote {
-    url = "http://localhost:"${HTTP_PORT}"/remote/"
+    url = "http://localhost:"${REMOTE_FIXTURE_HTTP_PORT}"/remote/"
     name = remote-service
     serialization = JSON
     retry = 5
@@ -23,7 +23,7 @@ remote-client {
 remote-client2 {
   implementation = oap.application.remote.RemoteClient
   remote {
-    url = "http://localhost:"${HTTP_PORT}"/remote/"
+    url = "http://localhost:"${REMOTE_FIXTURE_HTTP_PORT}"/remote/"
     name = <modules.oap-module-with-remoting.remote-service>
     serialization = JSON
     retry = 5
