--- a/oap-application/oap-application-test/src/test/resources/oap/application/testng/KernelFixtureTest/application.fixture-f1.conf
+++ b/oap-application/oap-application-test/src/test/resources/oap/application/testng/KernelFixtureTest/application.fixture-f1.conf
@@ -1,6 +1,6 @@
 boot.main = kernel-fixture-test
 services {
     kernel-fixture-test {
-        service.parameters.value = ${f2TEST_PORT}
+        service.parameters.value = ${f2_FIXTURE_TEST_PORT}
     }
 }
