OAP-256 AbstractKernelFixture: replaced system properties with hocon declaration

--- a/oap-application/oap-application-test/src/test/resources/oap/application/remote/RemoteTest/application-remote.conf
+++ b/oap-application/oap-application-test/src/test/resources/oap/application/remote/RemoteTest/application-remote.conf
@@ -8,8 +8,8 @@ profiles = [
 services {
   oap-http {
     oap-http-server.parameters {
-      defaultPort.httpPort = ${REMOTE_FIXTURE_HTTP_PORT}
-      additionalHttpPorts.httpprivate = ${REMOTE_FIXTURE_HTTP_PORT}
+      defaultPort.httpPort = ${HTTP_PORT}
+      additionalHttpPorts.httpprivate = ${HTTP_PORT}
     }
   }
   oap-application {
