--- a/oap-message/src/test/resources/oap/message/MessageServerTest/application-message.test.conf
+++ b/oap-message/src/test/resources/oap/message/MessageServerTest/application-message.test.conf
@@ -13,18 +13,18 @@ profiles = [
 services {
   oap-http {
     oap-http-server.parameters {
-      defaultPort.httpPort = ${MESSAGE_SERVER_FIXTURE_TEST_HTTP_PORT}
-      additionalHttpPorts.httpprivate = ${MESSAGE_SERVER_FIXTURE_TEST_HTTP_PORT}
+      defaultPort.httpPort = ${TEST_HTTP_PORT}
+      additionalHttpPorts.httpprivate = ${TEST_HTTP_PORT}
     }
   }
   oap-message {
     oap-http-message-sender.parameters {
       host = localhost
-      port = ${MESSAGE_SERVER_FIXTURE_TEST_HTTP_PORT}
-      persistenceDirectory = ${MESSAGE_SERVER_FIXTURE_TEST_DIRECTORY}/opt/oap/messages/sender
+      port = ${TEST_HTTP_PORT}
+      persistenceDirectory = ${TEST_DIRECTORY}/opt/oap/messages/sender
     }
     oap-http-message-handler.parameters {
-      controlStatePath = ${MESSAGE_SERVER_FIXTURE_TEST_DIRECTORY}/opt/oap/messages/server
+      controlStatePath = ${TEST_DIRECTORY}/opt/oap/messages/server
       clientHashCacheSize = 2048
     }
   }
