OAP-256 AbstractKernelFixture: replaced system properties with hocon declaration

--- a/oap-application/oap-application-test/src/test/resources/oap/application/remote/RemoteTest/application-remote.conf
+++ b/oap-application/oap-application-test/src/test/resources/oap/application/remote/RemoteTest/application-remote.conf
@@ -15,4 +15,9 @@ services {
   oap-application {
     remoting.parameters.serialization = JSON
   }
+
+  oap-module-with-remoting {
+    remote-client.remote.url = "http://localhost:"${HTTP_PORT}"/remote/"
+    remote-client2.remote.url = "http://localhost:"${HTTP_PORT}"/remote/"
+  }
 }
