--- a/oap-ws/oap-ws-file-ws/src/test/resources/oap/ws/file/FileWSTest/application.test.conf
+++ b/oap-ws/oap-ws-file-ws/src/test/resources/oap/ws/file/FileWSTest/application.test.conf
@@ -3,7 +3,7 @@ boot.main = oap-ws-file-ws
 profile = http
 
 services {
-  oap.oap-http-server.parameters.port = ${FILEWS_FIXTURE_TEST_HTTP_PORT}
+  oap.oap-http-server.parameters.port = ${TEST_HTTP_PORT}
 
   oap-ws.session-manager.parameters.cookieDomain = localhost
 
