OAP-251 hocon fs -> apache jclouds

--- a/oap-storage/pom.xml
+++ b/oap-storage/pom.xml
@@ -30,5 +30,9 @@
         <module>oap-storage-dynamo-client-test</module>
         <module>oap-storage-dynamo-client</module>
         <module>oap-storage-dynamo</module>
+
+        <module>oap-storage-cloud</module>
+        <module>oap-storage-cloud-aws-s3</module>
+        <module>oap-storage-cloud-test</module>
     </modules>
 </project>
