--- a/oap-logstream/oap-logstream/pom.xml
+++ b/oap-logstream/oap-logstream/pom.xml
@@ -66,6 +66,10 @@
                     <groupId>org.slf4j</groupId>
                     <artifactId>slf4j-reload4j</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.eclipse.jetty</groupId>
+                    <artifactId>jetty-security</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
 
