--- a/oap-logstream/oap-logstream/pom.xml
+++ b/oap-logstream/oap-logstream/pom.xml
@@ -114,6 +114,10 @@
                     <groupId>org.eclipse.jetty.websocket</groupId>
                     <artifactId>websocket-api</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>com.google.code.gson</groupId>
+                    <artifactId>gson</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
 
