--- a/oap-stdlib-test/pom.xml
+++ b/oap-stdlib-test/pom.xml
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>oap</groupId>
             <artifactId>oap-stdlib</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>oap</groupId>
