--- a/oap-application/oap-application-test/src/test/resources/oap/application/KernelTest/disabled/disabled.conf
+++ b/oap-application/oap-application-test/src/test/resources/oap/application/KernelTest/disabled/disabled.conf
@@ -13,7 +13,7 @@
     }
     s2 {
       implementation = oap.application.ServiceOne
-      enabled = false
+      profile = disabled
       parameters {
         i = 2
       }
