--- a/oap-http/pom.xml
+++ b/oap-http/pom.xml
@@ -16,5 +16,6 @@
         <module>oap-http-prometheus</module>
         <module>oap-pnio</module>
         <module>oap-http-test</module>
+        <module>oap-remote</module>
     </modules>
 </project>
