OAP-105 Remove direct disabling OAP dependecies

--- a/oap-application/oap-application-test/src/test/resources/oap/application/KernelProfileTest/application-profile.conf
+++ b/oap-application/oap-application-test/src/test/resources/oap/application/KernelProfileTest/application-profile.conf
@@ -3,7 +3,7 @@ boot.main = module-profile
 profiles = [
   {
     name = test-profile
-    profile = ${?ENABLE_TEST_PROFILE}
+    enabled = ${?ENABLE_TEST_PROFILE}
   }
   test-profile2
 ]
