--- a/oap-ws/oap-ws-openapi-ws/src/test/resources/META-INF/oap-module.conf
+++ b/oap-ws/oap-ws-openapi-ws/src/test/resources/META-INF/oap-module.conf
@@ -18,3 +18,21 @@ services {
     ws-service.path = example
   }
 }
+
+configurations = [
+  {
+    loader = oap.json.ext.ExtDeserializer
+    config = [
+      {
+        class = oap.ws.openapi.ExampleNewWS.NewWsBean
+        field = ext
+        implementation = oap.ws.openapi.DynamicBeanExt
+      }
+      {
+        class = oap.ws.openapi.CreativeUniversal
+        field = settings
+        implementation = oap.ws.openapi.AcmeCreativeSettings
+      }
+    ]
+  }
+]
