OAP-117 Support for properties for classes

--- a/oap-ws/oap-ws-api-ws/src/test/resources/META-INF/oap-module.conf
+++ b/oap-ws/oap-ws-api-ws/src/test/resources/META-INF/oap-module.conf
@@ -11,3 +11,16 @@ services {
     ws-service.path = recursion
   }
 }
+
+configurations = [
+  {
+    loader = oap.json.ext.ExtDeserializer
+    config = [
+      {
+        class = oap.ws.api.ExampleWS.Bean
+        field = ext
+        implementation = "oap.ws.api.ExampleWS$Bean$BeanExt"
+      }
+    ]
+  }
+]
