OAP-117 Support for properties for classes

--- a/oap-stdlib/src/test/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/test/resources/META-INF/oap-module.conf
@@ -8,7 +8,7 @@ configurations = [
         class = oap.json.properties.TestJsonProperties
         properties {
           property1 = oap.json.properties.TestJsonProperties.TestProperty1
-          property2 = oap.json.properties.TestJsonProperties.TestProperty2
+          include required("oap-module-include.conf")
         }
       }
     ]
