OAP-117 Support for properties for classes

--- a/oap-mail/oap-mail/src/main/resources/META-INF/oap-module.conf
+++ b/oap-mail/oap-mail/src/main/resources/META-INF/oap-module.conf
@@ -2,23 +2,21 @@ name = oap-mail
 services {
   oap-mail-password-authenticator.implementation = oap.mail.PasswordAuthenticator
 
-  oap-mail-transport-smtp {
-    profile = oap-mail-javamail
-    name = oap-mail-transport
+  oap-mail-transport {
     implementation = oap.mail.SmtpTransport
     parameters {
       authenticator = <modules.this.oap-mail-password-authenticator>
     }
   }
 
-  oap-mail-transport-mock {
-    profile = -oap-mail-javamail
-    name = oap-mail-transport
-    implementation = oap.mail.TransportMock
-    parameters {
-      authenticator = <modules.this.oap-mail-password-authenticator>
-    }
-  }
+//  oap-mail-transport-mock {
+//    profile = -oap-mail-javamail
+//    name = oap-mail-transport
+//    implementation = oap.mail.TransportMock
+//    parameters {
+//      authenticator = <modules.this.oap-mail-password-authenticator>
+//    }
+//  }
 
   oap-mail-queue.implementation: oap.mail.MailQueue
 
