OAP-117 Support for properties for classes

--- a/oap-stdlib-test/src/test/resources/META-INF/oap-module.conf
+++ b/oap-stdlib-test/src/test/resources/META-INF/oap-module.conf
@@ -2,6 +2,12 @@ name = oap-stdlib-app-test
 
 configurations = [
   {
+    loader = oap.json.TypeIdFactory
+    config = {
+      b = oap.json.TypeIdAccessorFactoryTest.TestBean
+    }
+  }
+  {
     loader = oap.json.ext.ExtDeserializer
     config = [
       {
