--- a/oap-stdlib/src/main/resources/META-INF/oap-module.conf
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.conf
@@ -12,3 +12,12 @@ services {
     implementation = oap.time.JodaTimeService
   }
 }
+
+configurations = [
+  {
+    loader = oap.json.TypeIdFactory
+    config = {
+      oap-pair = oap.util.Pair
+    }
+  }
+]
