OAP-117 Support for properties for classes

--- a/oap-ws/oap-ws-test/src/test/resources/application-ws.test.conf
+++ b/oap-ws/oap-ws-test/src/test/resources/application-ws.test.conf
@@ -12,6 +12,6 @@ services {
     }
   }
   oap-ws {
-    session-manager.parameters.cookieDomain = "localhost"
+    session-manager.parameters.cookieDomain = "127.0.0.1"
   }
 }
