OAP-117 Support for properties for classes

--- a/oap-statsdb/oap-statsdb/src/main/resources/META-INF/oap-module.conf
+++ b/oap-statsdb/oap-statsdb/src/main/resources/META-INF/oap-module.conf
@@ -1,12 +1,11 @@
-name = oap
-services {
-}
+name = oap-statsdb
 
 configurations = [
   {
     loader = oap.json.TypeIdFactory
     config = {
-      oap-pair = oap.util.Pair
+      node = oap.statsdb.Node
+      nid = oap.statsdb.NodeId
     }
   }
 ]
