OAP-119 jclouds: byte[] upload support

--- a/oap-http/oap-remote-application/src/test/resources/oap/remote/application/RemoteTest/application-remote.conf
+++ b/oap-http/oap-remote-application/src/test/resources/oap/remote/application/RemoteTest/application-remote.conf
@@ -7,7 +7,7 @@ services {
       additionalHttpPorts.httpprivate = ${HTTP_PORT}
     }
   }
-  oap-application {
+  oap-remote {
     remoting.parameters.serialization = JSON
   }
 
