--- a/oap-application/oap-application-test/src/test/resources/oap/application/KernelTest/disabled/disabled.conf
+++ b/oap-application/oap-application-test/src/test/resources/oap/application/KernelTest/disabled/disabled.conf
@@ -1,22 +1,20 @@
-{
-  name = disabled
-  services {
-    s1 {
-      implementation = oap.application.ServiceOne
-      parameters {
-        i = 1
-        list = [
-          modules.this.s2
-        ]
-      }
-      dependsOn = [s2]
+name = disabled
+services {
+  s1 {
+    implementation = oap.application.ServiceOne
+    parameters {
+      i = 1
+      list = [
+        <modules.this.s2>
+      ]
     }
-    s2 {
-      implementation = oap.application.ServiceOne
-      profile = disabled
-      parameters {
-        i = 2
-      }
+    dependsOn = [s2]
+  }
+  s2 {
+    implementation = oap.application.ServiceOne
+    profile = disabled
+    parameters {
+      i = 2
     }
   }
 }
