--- a/oap-application/oap-application-test/src/test/resources/oap/application/KernelLinkImplementationsTest/field-references2.conf
+++ b/oap-application/oap-application-test/src/test/resources/oap/application/KernelLinkImplementationsTest/field-references2.conf
@@ -10,7 +10,7 @@
     ti2 {
       implementation = oap.application.KernelLinkImplementationsTest.TestInterfaceImpl2
       link.tis = <modules.field-references.m>
-      profile = disabled
+      enabled = false
       supervision.supervise = true
     }
     ti3 {
