--- a/oap-application/oap-application-test/src/test/resources/oap/application/KernelTest/disabled/disabled.conf
+++ b/oap-application/oap-application-test/src/test/resources/oap/application/KernelTest/disabled/disabled.conf
@@ -12,7 +12,7 @@ services {
   }
   s2 {
     implementation = oap.application.ServiceOne
-    profile = disabled
+    enabled = false
     parameters {
       i = 2
     }
