--- a/oap-application/oap-application-test/src/test/resources/oap/application/KernelTest/env/env.conf
+++ b/oap-application/oap-application-test/src/test/resources/oap/application/KernelTest/env/env.conf
@@ -1,7 +1,7 @@
 {
   name = env
   services {
-    s1.implementation = "oap.application.KernelTest$Service1"
-    s2.implementation = "oap.application.KernelTest$Service2"
+    s1.implementation = oap.application.KernelTest.Service1
+    s2.implementation = oap.application.KernelTest.Service2
   }
 }
