--- a/oap-application/oap-application-test/src/test/resources/oap/application/KernelTest/map/map.conf
+++ b/oap-application/oap-application-test/src/test/resources/oap/application/KernelTest/map/map.conf
@@ -21,7 +21,7 @@
     }
     s3 {
       implementation = oap.application.ServiceOne
-      profile = disabled
+      enabled = false
       parameters {
         i = 3
       }
