--- a/oap-application/oap-application-test/src/test/resources/oap/application/KernelTest/reference/reference.conf
+++ b/oap-application/oap-application-test/src/test/resources/oap/application/KernelTest/reference/reference.conf
@@ -12,7 +12,7 @@
     }
     s2 {
       implementation = oap.application.ServiceOne
-      profile = disabled
+      enabled = false
       parameters {
         i = 2
       }
