rm service name

--- a/oap-application/oap-application-test/src/test/resources/oap/application/KernelTest/modules/m2.conf
+++ b/oap-application/oap-application-test/src/test/resources/oap/application/KernelTest/modules/m2.conf
@@ -6,10 +6,10 @@ services {
     implementation = oap.application.ServiceTwo
     parameters {
       j = 1
-      one = <modules.m1.ServiceOne>
+      one = <modules.m1.ServiceOneP1>
     }
     listen {
-      some = <modules.m1.ServiceOne>
+      some = <modules.m1.ServiceOneP1>
     },
     supervision.supervise = true
   }
