--- a/oap-application/oap-application-test/src/test/resources/oap/application/KernelTest/modules/m3.conf
+++ b/oap-application/oap-application-test/src/test/resources/oap/application/KernelTest/modules/m3.conf
@@ -8,7 +8,7 @@ services {
     implementation = oap.application.ServiceDepsList
     parameters {
       deps = [
-        <modules.m1.ServiceOne>
+        <modules.m1.ServiceOneP1>
         <modules.m2.ServiceTwo>
       ]
     }
