--- a/oap-mail/oap-mail/src/main/resources/META-INF/oap-module.conf
+++ b/oap-mail/oap-mail/src/main/resources/META-INF/oap-module.conf
@@ -3,13 +3,19 @@ services {
   oap-mail-password-authenticator.implementation = oap.mail.PasswordAuthenticator
 
   oap-mail-transport {
+    implementation = oap.mail.Transport
+  }
+
+  oap-mail-transport-smtp {
     implementation = oap.mail.SmtpTransport
     parameters {
       authenticator = <modules.this.oap-mail-password-authenticator>
     }
   }
 
-  oap-mail-queue.implementation: oap.mail.MailQueue
+  oap-mail-queue {
+    implementation: oap.mail.MailQueue
+  }
 
   oap-mail-mailman {
     implementation = oap.mail.Mailman
