--- a/oap-mail/oap-mail/src/main/resources/META-INF/oap-module.conf
+++ b/oap-mail/oap-mail/src/main/resources/META-INF/oap-module.conf
@@ -3,6 +3,7 @@ services {
   oap-mail-password-authenticator.implementation = oap.mail.PasswordAuthenticator
 
   oap-mail-transport {
+    avstract = true
     implementation = oap.mail.Transport
   }
 
