--- a/oap-statsdb/oap-statsdb-master/pom.xml
+++ b/oap-statsdb/oap-statsdb-master/pom.xml
@@ -27,12 +27,23 @@
         </dependency>
         <dependency>
             <groupId>oap</groupId>
+            <artifactId>oap-message-server</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>oap</groupId>
             <artifactId>oap-storage-mongo</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>oap</groupId>
             <artifactId>oap-storage-mongo-test</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>oap</groupId>
+            <artifactId>oap-message-test</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
