--- a/oap-statsdb/oap-statsdb/pom.xml
+++ b/oap-statsdb/oap-statsdb/pom.xml
@@ -21,7 +21,7 @@
         </dependency>
         <dependency>
             <groupId>oap</groupId>
-            <artifactId>oap-message</artifactId>
+            <artifactId>oap-message-client</artifactId>
             <version>${project.version}</version>
         </dependency>
 
