--- a/oap-formats/oap-logstream/oap-logstream/pom.xml
+++ b/oap-formats/oap-logstream/oap-logstream/pom.xml
@@ -26,12 +26,7 @@
         </dependency>
         <dependency>
             <groupId>oap</groupId>
-            <artifactId>oap-message-client</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>oap</groupId>
-            <artifactId>oap-message-server</artifactId>
+            <artifactId>oap-message-common</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
