--- a/oap-application/oap-application-test/src/test/resources/oap/application/KernelAbstractServiceTest/testReferenceToAbstractService-module.conf
+++ b/oap-application/oap-application-test/src/test/resources/oap/application/KernelAbstractServiceTest/testReferenceToAbstractService-module.conf
@@ -1,9 +1,16 @@
 name = testReferenceToAbstractService
 
 services {
+  serviceForInitImplBeforeAbstractService {
+    implementation = oap.application.ServiceOne
+    parameters.i = 10
+  }
+
   service1 {
     abstract = true
     implementation = oap.application.IService
+
+    dependsOn = <modules.this.serviceForInitImplBeforeAbstractService>
   }
 
   serviceImpl {
