--- a/oap-statsdb/oap-statsdb-common/pom.xml
+++ b/oap-statsdb/oap-statsdb-common/pom.xml
@@ -4,8 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <name>oap-statsdb</name>
-    <artifactId>oap-statsdb</artifactId>
+    <artifactId>oap-statsdb-common</artifactId>
 
     <parent>
         <groupId>oap</groupId>
@@ -17,11 +16,6 @@
         <dependency>
             <groupId>oap</groupId>
             <artifactId>oap-stdlib</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>oap</groupId>
-            <artifactId>oap-message-client</artifactId>
             <version>${project.version}</version>
         </dependency>
 
