--- a/oap-statsdb/pom.xml
+++ b/oap-statsdb/pom.xml
@@ -15,5 +15,6 @@
         <module>oap-statsdb-common</module>
         <module>oap-statsdb-node</module>
         <module>oap-statsdb-master</module>
+        <module>oap-statsdb-test</module>
     </modules>
 </project>
